--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,15 @@ go:
 install:
   - go get -u github.com/golang/dep/cmd/dep
   - dep ensure
+  - go get golang.org/x/tools/cmd/cover
+  - go get github.com/mattn/goveralls
 
 script:
  - bash script/coverage.sh
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+  - goveralls -coverprofile=coverage.out -service=travis-ci
   - bash script/Dockerbuild.sh
 
 deploy:
