--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ go:
 install:
 
 script:
-  - bash script/coverage.sh
+  - bash script/TestCoverage.sh
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
