add string util and config merge

--- a/ladrawex.yml
+++ b/ladrawex.yml
@@ -1,10 +1,5 @@
-app:
-  web:
-    server_address: ":9000"
-    middleware:
-      cors:
-        enable: false
-      gzip:
-        enable: false
-      static:
-        enable: true
+web:
+  serverAddress: ":9000"
+  middleware:
+    static:
+      enable: true
