--- a/ladrawex-prod.yml
+++ b/ladrawex-prod.yml
@@ -1,10 +1,7 @@
-app:
-  web:
-    server_address: ":8000"
-    middleware:
-      cors:
-        enable: true
-      gzip:
-        enable: true
-      static:
-        enable: true
+web:
+  serverAddress: ":8000"
+  middleware:
+    cors:
+      enable: true
+    gzip:
+      enable: true
