--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -56,3 +56,7 @@
 [[constraint]]
   name = "github.com/spf13/viper"
   version = "1.1.0"
+
+[[constraint]]
+  name = "github.com/lucasb-eyer/go-colorful"
+  version = "1.0.0"
