add drawex and tikz drawers

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -60,3 +60,7 @@
 [[constraint]]
   name = "github.com/lucasb-eyer/go-colorful"
   version = "1.0.0"
+
+[[constraint]]
+  name = "github.com/spf13/cast"
+  version = "1.2.0"
